--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2018"
 
 [dependencies]
 
+actix = "*"
 actix-web = "*"
+serde = { version="1.*",features=["derive"]}
+serde_json = "1.*"
+failure = "*"
